--- a/nw-analysis/nw-analysis.vcxproj
+++ b/nw-analysis/nw-analysis.vcxproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <ClInclude Include="delegator.h" />
     <ClInclude Include="analtask.h" />
+    <ClInclude Include="follow.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
