--- a/nw-analysis/nw-analysis.vcxproj
+++ b/nw-analysis/nw-analysis.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="delegator.h" />
     <ClInclude Include="analtask.h" />
     <ClInclude Include="follow.h" />
+    <ClInclude Include="gcorr.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
