--- a/nw-analysis/nw-analysis.vcxproj.filters
+++ b/nw-analysis/nw-analysis.vcxproj.filters
@@ -39,4 +39,7 @@
       <Filter>Source Files\analysis</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
