--- a/nw-analysis/nw-analysis.vcxproj
+++ b/nw-analysis/nw-analysis.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="svden.h" />
     <ClInclude Include="svt.h" />
     <ClInclude Include="sxyzc.h" />
+    <ClInclude Include="thickness.h" />
     <ClInclude Include="varden.h" />
   </ItemGroup>
   <ItemGroup>
