--- a/nw-analysis/nw-analysis.vcxproj
+++ b/nw-analysis/nw-analysis.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="gcorr.h" />
     <ClInclude Include="gofr.h" />
     <ClInclude Include="gtcorr.h" />
+    <ClInclude Include="NWXYZIO.h" />
     <ClInclude Include="highlight.h" />
     <ClInclude Include="histo.h" />
     <ClInclude Include="momentum.h" />
