--- a/nw-analysis/nw-analysis.vcxproj
+++ b/nw-analysis/nw-analysis.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="analysis_funcs.h" />
     <ClInclude Include="delegator.h" />
     <ClInclude Include="analtask.h" />
+    <ClInclude Include="density.h" />
     <ClInclude Include="follow.h" />
     <ClInclude Include="gcorr.h" />
     <ClInclude Include="gofr.h" />
