--- a/nw-analysis/nw-analysis.vcxproj.filters
+++ b/nw-analysis/nw-analysis.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="thickness.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="density.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
