working simreplay utilities: properties, readParticles

--- a/nw-analysis/nw-analysis.vcxproj
+++ b/nw-analysis/nw-analysis.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="svt.h" />
     <ClInclude Include="sxyzc.h" />
     <ClInclude Include="thickness.h" />
+    <ClInclude Include="utilities.h" />
     <ClInclude Include="varden.h" />
   </ItemGroup>
   <ItemGroup>
