--- a/nw-analysis/nw-analysis.vcxproj.filters
+++ b/nw-analysis/nw-analysis.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="density.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utilities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
