add  sxyzc::calculate_3d functionality, add util::nw namespace, add liquid_crystals.h generic definitions.

--- a/nw-analysis/nw-analysis.vcxproj
+++ b/nw-analysis/nw-analysis.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="delegator.h" />
     <ClInclude Include="analtask.h" />
     <ClInclude Include="density.h" />
+    <ClInclude Include="liquid_crystals.h" />
     <ClInclude Include="follow.h" />
     <ClInclude Include="gcorr.h" />
     <ClInclude Include="gofr.h" />
